--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@chainlink/contracts": "^0.1.7",
     "@openzeppelin/contracts": "^3.4.0",
-    "@truffle/hdwallet-provider": "1.0.40",
+    "@truffle/hdwallet-provider": "^1.0.40",
     "dotenv": "^8.2.0",
     "truffle-plugin-verify": "^0.5.8"
   },
